# rust_hybrid_auth_api_warp

./: .env.local  .gitignore  Cargo.toml  README.md  docker-compose.yml  makefile
migrations/: 20250420094534_create_users.sql
src/: main.rs
src/api/: mod.rs
src/api/auth/: controller.rs  dto.rs  repository.rs  service.rs
src/db/: connection.rs
src/schema/: models.rs
src/shared/: mod.rs
src/shared/config/: environment.rs
src/shared/error/: handlers.rs  mod.rs
src/shared/kafka_message/: mod.rs  payload.rs  producer.rs  topics.rs
src/shared/utils/: hash.rs  jwt.rs  logger.rs  mod.rs  validator.rs
