[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-error = "0.2.1"

sqlx = { version = "0.8.5", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }

validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
thiserror = "2.0.12"
chrono = { version = "0.4.40", features = ["serde"] }


argon2 = "0.5.3"
rand_core = "0.9.3"
password-hash = "0.5"
